# fastapi.tiangolo.com-tutorial-body

./: .gitignore  README.md  pyproject.toml
tutorial_body/: main.py
